# protocol-stack-for-ink

./: .gitignore  README.md  op.sh  opsh
contracts/Payload/: Cargo.toml  lib.rs  message_define.rs  message_protocol.rs
contracts/Protocal/: Cargo.toml  lib.rs
contracts/Protocol/: Cargo.toml  README.md  lib.rs
contracts/algorithm/: Cargo.toml  README.md  lib.rs
contracts/callee/: Cargo.toml  lib.rs  test.rs
contracts/cross-chain/: .gitignore  Cargo.toml  build.sh  cross_chain_base.rs  evaluation.rs  lib.rs  message_define.rs  payload.rs  sqos_base.rs  storage_define.rs
contracts/cross_chain/: Cargo.toml
contracts/greeting/: Cargo.toml  lib.rs
contracts/locker-mock/: Cargo.toml  lib.rs
contracts/message-verify/: lib.rs
contracts/signatureCrseco/: Cargo.toml  README.md  lib.rs
contracts/tokenomics/: Cargo.toml  lib.rs
contracts/vv/: Cargo.toml  lib.rs
docs/: Dev Record.md
leaf/basic/ink/: index.js  ink.js
leaf/crossChain/: relayer.js  relayerMgr.js
leaf/crossChain/ink/: ethereumToInk.js  index.js  nearToInk.js
test/: .gitignore  README.md  addressAdapter.mjs  app.js  crypto.js  crypto.mjs  develop.js  hashCrypto.js  hashCrypto.mjs  hashCrypto.ts  ink_base.mjs  item-challenge.md  item-error-rollback.md  item-hidden-reveal.md  item-threshold.md  nodeEvaluation.js  omnichainCrypto.js  omnichainCrypto.ts  package.json  payload.js  protocol_test.js  selectRouters.js  testsign.js  typedefines.mjs  vvtest.mjs
