[package]
authors = ["[your_name] <[your_email]>"]
edition = "2021"
name = "cross_chain"
version = "0.1.0"

[dependencies]
ink = {git = "https://github.com/paritytech/ink", tag = "v4.0.0-alpha.3", default-features = false}

scale = {package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
scale-info = {version = "2", default-features = false, features = ["derive", "serde", "decode"]}

payload = {git = "https://github.com/dantenetwork/message-ink", branch = "main", default-features = false, features = ["ink-as-dependency"]}

[lib]
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib", # Used for ABI generation.
  "rlib",
]
name = "cross_chain"
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]
